// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lock-file mapLockFileDataToExternalNodes should map npm lock file data to external nodes 1`] = `
Object {
  "data": Object {
    "packageName": "yargs",
    "version": "17.5.1",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes should map npm lock file data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui@7.0.4",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade@3.1.1",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file@2.0.5",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory@2.1.1",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width@4.2.3",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n@5.0.8",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser@21.0.1",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes should map pnpm lock file data to external nodes 1`] = `
Object {
  "data": Object {
    "packageName": "yargs",
    "version": "17.5.1",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes should map pnpm lock file data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui@7.0.4",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade@3.1.1",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file@2.0.5",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory@2.1.1",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width@4.2.3",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n@5.0.8",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser@21.1.1",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes should map successfully complex npm lock file 1`] = `
Object {
  "data": Object {
    "packageName": "nx",
    "version": "14.7.5",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes should map successfully complex npm lock file 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli@14.7.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao@14.7.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher@2.0.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar@3.5.3",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor@3.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners@2.6.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui@7.0.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv@10.0.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer@2.3.6",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob@3.2.7",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures@3.2.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat@5.0.2",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra@10.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob@7.1.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore@5.2.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser@3.0.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch@3.0.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path@4.0.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open@8.4.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver@7.3.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width@4.2.3",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream@2.2.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp@0.2.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths@3.14.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib@2.4.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache@2.3.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs@17.5.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser@21.0.1",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes should map successfully complex pnpm lock file 1`] = `
Object {
  "data": Object {
    "packageName": "nx",
    "version": "14.7.5",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes should map successfully complex pnpm lock file 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli@14.7.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao@14.7.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher@2.0.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar@3.5.3",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor@3.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners@2.6.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui@7.0.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv@10.0.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer@2.3.6",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob@3.2.7",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures@3.2.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat@5.0.2",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra@10.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob@7.1.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore@5.2.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser@3.0.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch@3.0.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path@4.0.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open@8.4.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver@7.3.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width@4.2.3",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream@2.2.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp@0.2.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths@3.14.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib@2.4.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache@2.3.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs@17.5.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser@21.0.1",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes should map successfully complex pnpm lock file 3`] = `
Object {
  "data": Object {
    "packageName": "@phenomnomnominal/tsquery",
    "version": "4.1.1",
  },
  "name": "npm:@phenomnomnominal/tsquery",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes should map successfully complex pnpm lock file 4`] = `
Array [
  Object {
    "source": "npm:@phenomnomnominal/tsquery",
    "target": "npm:esquery@1.4.0",
    "type": "static",
  },
  Object {
    "source": "npm:@phenomnomnominal/tsquery",
    "target": "npm:typescript@4.8.3",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes should map successfully complex yarn lock file 1`] = `
Object {
  "data": Object {
    "packageName": "nx",
    "version": "14.7.5",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes should map successfully complex yarn lock file 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli@14.7.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao@14.7.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher@2.0.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar@3.5.3",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor@3.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners@2.6.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui@7.0.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv@10.0.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer@2.3.6",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob@3.2.7",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures@3.2.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat@5.0.2",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra@10.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob@7.1.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore@5.2.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser@3.0.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch@3.0.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path@4.0.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open@8.4.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver@7.3.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width@4.2.3",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream@2.2.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp@0.2.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths@3.14.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib@2.4.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache@2.3.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs@17.5.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser@21.0.1",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes should map yarn lock file data to external nodes 1`] = `
Object {
  "data": Object {
    "packageName": "yargs",
    "version": "17.5.1",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes should map yarn lock file data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui@7.0.4",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade@3.1.1",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file@2.0.5",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory@2.1.1",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width@4.2.3",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n@5.0.8",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser@21.1.1",
    "type": "static",
  },
]
`;
